--- a/SIR.ipynb
+++ b/SIR.ipynb
@@ -6,7 +6,7 @@
       "name": "SIR.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMDnb/L+OgdeTx74e9bN7ez",
+      "authorship_tag": "ABX9TyPU9ISl9hIfaco0Npl1WDxW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,26 +35,22 @@
         "# Modelo Epidemiológico **SIR**\n",
         "A pandemia do COVID-19, também chamado de \"o novo coronavírus\", colocou em evidência a importância da matemática em nosso cotidiano. Tenho certeza que nesse período você já ouviu falar sobre projeções do avanço da doença e pico da curva de infectados. Porém, você sabe como a matemática pode ser aplicada para realizar essa análise?\n",
         "\n",
-        "\n",
-        "<center><img alt=\"covid\" width=\"10%\" src=\"https://github.com/eduardocorrearaujo/ModeloSIR/blob/master/imcovid.png\"></center>\n",
-        "\n",
-        "\n",
-        "**Aprender a colocar imagem**\n",
-        "\n",
+        "<p align=\"center\">\n",
+        "<img alt=\"covid\" width=\"25%\" src=\"https://github.com/eduardocorrearaujo/ModeloSIR/blob/master/imcovid.png?raw=true\">\n",
+        "</p>\n",
+        "<center>\n",
         "<a href=\"https://br.freepik.com/fotos-vetores-gratis/medico\">Médico vetor criado por freepik - br.freepik.com</a>\n",
+        "</center>\n",
         "\n",
         "Nessa análise, podem ser aplicados modelos compartimentais, que dividem a população em \"caixinhas\" para assim, tentar entender o comportamento de uma doença. Um dos modelos compartimentais mais simples é o modelo epidemiológico **SIR**, proposto em 1927 por Kermack e McKendrick.\n",
         "\n",
         "Esse modelo divide a população em 3 grupos, **Suscetíveis (S)**, **Infectados (I)** e **Recuperados (R)**. Suscetíveis  representam a parcela da população que\n",
         "        não foi infectada, os infectados representam as pessoas que estão infectadas com o vírus, transmitindo para outras pessoas e os recuperados são aqueles que\n",
         "        já se curaram, ou seja, estavam infectados, mas agora estão curados. Veja o diagrama abaixo.\n",
-       
-        
-        <p align="center">
-        <img src="modeloSIR.png" >
-        </p>
-       
-       
+        "<p align=\"center\">\n",
+        "<img alt=\"sir\" width=\"40%\" src=\"https://github.com/eduardocorrearaujo/ModeloSIR/blob/master/modeloSIR.png?raw=true\">\n",
+        "</p>\n",
+        "\n",
         "No digrama temos duas letras $\\beta$ e $\\gamma$ elas representam a taxa em que os indivíduos se movem de um grupo para o outro. O\n",
         "$\\beta$ representa a **taxa de contágio**, ela vai ser a responsável por \"mover\" uma pessoa do grupo dos suscetíveis para o grupo dos infectados. Ela está relacionada a\n",
         "a probabilidade de uma transmissão ocorrer decorrente do contato entre os indivíduos.  O $\\gamma$ representa a **taxa  de recuperação**, ela é responsável por \"mover\"\n",
