--- a/SIR.ipynb
+++ b/SIR.ipynb
@@ -6,7 +6,7 @@
       "name": "SIR.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrEObL4PzDOhbD9MZMEVAt",
+      "authorship_tag": "ABX9TyPTtGWd35Kq4Zf+g9jjqnqM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "Matematicamente, o modelo SIR é definido pelo seguinte sistema de equações diferenciais ordinárias:\n",
         "\n",
         "\\begin{cases}\n",
-        "S'(t) = \\dfrac{-\\beta S(t) I(t)}{N}\\\\\n",
+        "S'(t) = -\\dfrac{\\beta S(t) I(t)}{N}\\\\\n",
         "I'(t) = \\dfrac{\\beta S(t) I(t)}{N} -  \\gamma I(t)\\\\\n",
         "R'(t) = \\gamma I(t)\n",
         "\\end{cases}\n",
@@ -133,15 +133,20 @@
         "    s0 = N - i0 - r0\n",
         "    y0 = [s0,i0,r0] #vetor que armazena as condições iniciais do sistema\n",
         "\n",
-        "    sol = odeint(dotSIR, y0,t, args=(beta,gama,N)) #O comando responsável por encontrar a solução numérica é o odeint\n",
+        "    sol = odeint(dotSIR, y0,t, args=(beta,gama,N)) \n",
+        "    #O comando responsável por encontrar a solução numérica é o odeint\n",
         "    # O comando retorna uma matriz com as colunas determinadas pelo número de equações, nesse caso 3 e com o número \n",
         "    # de linhas referentes ao intervalo de tempo considerado.\n",
         "    \n",
-        "    S = sol[:,0] # a primeira coluna da matriz sol é referente aos Suscetíves, que é a primeira equação definida no sistema.\n",
-        "    I = sol[:,1] # a segunda coluna da matriz é referente aos Infectados, que é a segunda equação definida no sistema.\n",
-        "    R = sol[:,2] # a terceira coluna da matriz é referente aos Recuperados, que é a terceira equação definida no sistema.\n",
-        "    C = sol[:, 1] + sol[:,2] #variável que armazena a soma dos Infectados + Recuperados com o tempo para podermos analisar o\n",
-        "                            #valor acumulado de pessoas infectadas no decorrer da epidemia\n",
+        "    S = sol[:,0] \n",
+        "    # a primeira coluna da matriz sol é referente aos Suscetíves, que é a primeira equação definida no sistema.\n",
+        "    I = sol[:,1] \n",
+        "    # a segunda coluna da matriz é referente aos Infectados, que é a segunda equação definida no sistema.\n",
+        "    R = sol[:,2] \n",
+        "    # a terceira coluna da matriz é referente aos Recuperados, que é a terceira equação definida no sistema.\n",
+        "    C = sol[:, 1] + sol[:,2] \n",
+        "    #variável que armazena a soma dos Infectados + Recuperados com o tempo para podermos analisar o\n",
+        "    #valor acumulado de pessoas infectadas no decorrer da epidemia\n",
         "\n",
         "    return S,I,R,C"
       ],
@@ -163,11 +168,11 @@
       "metadata": {
         "id": "sLpO9FYbcdgY",
         "colab_type": "code",
+        "outputId": "a1b507f9-d68d-4c84-dbb1-6ce54f4eca78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        },
-        "outputId": "a1b507f9-d68d-4c84-dbb1-6ce54f4eca78"
+        }
       },
       "source": [
         "t = np.arange(300) #gera um vetor (0,1,2,3..,299) que representa o valores de t usados para gerar a solução.\n",
@@ -222,7 +227,7 @@
         "#Caso deseje que o R0 seja printado adicione o seguinte comando:\n",
         "#print('Para essas condições o R0 é:%f' %R0)\n"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
