--- a/SIR.ipynb
+++ b/SIR.ipynb
@@ -6,7 +6,7 @@
       "name": "SIR.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTtGWd35Kq4Zf+g9jjqnqM",
+      "authorship_tag": "ABX9TyOptvPKo5mvsRnFkXn2D2sk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,6 @@
       },
       "source": [
         "#Solução numérica do modelo SIR\n",
-        "\n",
         "def SIR(t,beta,gama,N, i0,r0): \n",
         "    def dotSIR(y,t,beta,gama,N): # função que define o sistema de EDO's\n",
         "      S,I,R = y # # y é o vetor com as 3 equações S,I,R\n",
@@ -135,15 +134,15 @@
         "\n",
         "    sol = odeint(dotSIR, y0,t, args=(beta,gama,N)) \n",
         "    #O comando responsável por encontrar a solução numérica é o odeint\n",
-        "    # O comando retorna uma matriz com as colunas determinadas pelo número de equações, nesse caso 3 e com o número \n",
-        "    # de linhas referentes ao intervalo de tempo considerado.\n",
+        "    # O comando retorna uma matriz com as colunas determinadas pelo número de equações, nesse caso 3 \n",
+        "    # e com o número de linhas referentes ao intervalo de tempo considerado.\n",
         "    \n",
         "    S = sol[:,0] \n",
-        "    # a primeira coluna da matriz sol é referente aos Suscetíves, que é a primeira equação definida no sistema.\n",
+        "    # a primeira coluna da matriz sol é referente aos Suscetíves, que é a primeira equação do sistema.\n",
         "    I = sol[:,1] \n",
-        "    # a segunda coluna da matriz é referente aos Infectados, que é a segunda equação definida no sistema.\n",
+        "    # a segunda coluna da matriz é referente aos Infectados, que é a segunda equação do sistema.\n",
         "    R = sol[:,2] \n",
-        "    # a terceira coluna da matriz é referente aos Recuperados, que é a terceira equação definida no sistema.\n",
+        "    # a terceira coluna da matriz é referente aos Recuperados, que é a terceira equação do sistema.\n",
         "    C = sol[:, 1] + sol[:,2] \n",
         "    #variável que armazena a soma dos Infectados + Recuperados com o tempo para podermos analisar o\n",
         "    #valor acumulado de pessoas infectadas no decorrer da epidemia\n",
