--- a/SIR.ipynb
+++ b/SIR.ipynb
@@ -6,7 +6,7 @@
       "name": "SIR.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOptvPKo5mvsRnFkXn2D2sk",
+      "authorship_tag": "ABX9TyMwlpPn8QrMaiLPLET+/xB4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,8 @@
         }
       },
       "source": [
-        "t = np.arange(300) #gera um vetor (0,1,2,3..,299) que representa o valores de t usados para gerar a solução.\n",
+        "t = np.arange(300) \n",
+        "#gera um vetor (0,1,2,3..,299) que representa o valores de t usados para gerar a solução.\n",
         "\n",
         "#parâmetros para gerar a solução:\n",
         "beta = 0.18\n",
@@ -184,11 +185,10 @@
         "r0 = 0\n",
         "\n",
         "\n",
-        "\n",
-        "solucao = SIR(t,beta,gama,N, i0,r0) #variável que armazenará S,I,R,C que são os valores retornados pela função SIR,\n",
-        "#como a função retorna um array com cada elemento sendo S,I,R,C para analisar cada solução separadamente vamos definir \n",
-        "#as seguintes variáveis\n",
-        "\n",
+        "solucao = SIR(t,beta,gama,N, i0,r0) \n",
+        "#variável que armazenará S,I,R,C que são os valores retornados pela função SIR,\n",
+        "#como a função retorna um array com cada elemento sendo S,I,R,C para analisar cada solução separadamente  \n",
+        "#vamos definir as seguintes variáveis\n",
         "S = solucao[0]  #Suscetíves\n",
         "I = solucao[1]  #Infectados\n",
         "R = solucao[2]  #Recuperados\n",
