--- a/SIR.ipynb
+++ b/SIR.ipynb
@@ -6,7 +6,7 @@
       "name": "SIR.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwlpPn8QrMaiLPLET+/xB4",
+      "authorship_tag": "ABX9TyNwVpsT+w4JnNrLIgr6WSUN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,11 +178,11 @@
         "#gera um vetor (0,1,2,3..,299) que representa o valores de t usados para gerar a solução.\n",
         "\n",
         "#parâmetros para gerar a solução:\n",
-        "beta = 0.18\n",
-        "gama = 0.047\n",
-        "N = 1000\n",
-        "i0 = 1\n",
-        "r0 = 0\n",
+        "beta = 0.18    #taxa de contágio\n",
+        "gama = 0.047   # taxa de recuperação\n",
+        "N = 1000       # população total\n",
+        "i0 = 1         # número inicial de infectados\n",
+        "r0 = 0         # número inicial de recuperados\n",
         "\n",
         "\n",
         "solucao = SIR(t,beta,gama,N, i0,r0) \n",
